--- a/circle.yml
+++ b/circle.yml
@@ -96,6 +96,7 @@ jobs:
         environment:
           POSTGRES_USER: vapor_username
           POSTGRES_DB: vapor_database
+          POSTGRES_PASSWORD: vapor_password
     steps:
       - run:
           name: Clone Fluent PostgreSQL
