--- a/circle.yml
+++ b/circle.yml
@@ -1,138 +1,22 @@
 version: 2
 
 jobs:
-  macos:
-    macos:
-      xcode: "9.2"
+  linux:
+    docker:
+      - image: codevapor/swift:5.0
     steps:
       - checkout
       - run: swift build
       - run: swift test
-
-  linux:
-    docker:
-      - image: codevapor/swift:4.1
-    steps:
-      - checkout
-      - run: 
-          name: Compile code
-          command: swift build
-      - run: 
-          name: Run unit tests
-          command: swift test
-
   linux-release:
     docker:
-      - image: codevapor/swift:4.1
+      - image: codevapor/swift:5.0
     steps:
       - checkout
-      - run: 
-          name: Compile code with optimizations
-          command: swift build -c release
-
-  linux-fluent:
-    docker:
-      - image: codevapor/swift:4.1
-    steps:
-      - run:
-          name: Clone Fluent
-          command: git clone -b master https://github.com/vapor/fluent.git
-          working_directory: ~/
-      - run:
-          name: Switch Fluent to this SQL revision
-          command: swift package edit SQL --revision $CIRCLE_SHA1
-          working_directory: ~/fluent
-      - run:
-          name: Run Vapor unit tests
-          command: swift test
-          working_directory: ~/fluent
-
-  linux-fluent-sqlite:
-    docker:
-      - image: codevapor/swift:4.1
-    steps:
-      - run:
-          name: Clone Fluent SQLite
-          command: git clone -b master https://github.com/vapor/fluent-sqlite.git
-          working_directory: ~/
-      - run:
-          name: Switch Fluent SQLite to this SQL revision
-          command: swift package edit SQL --revision $CIRCLE_SHA1
-          working_directory: ~/fluent-sqlite
-      - run:
-          name: Run Fluent SQLite unit tests
-          command: swift test
-          working_directory: ~/fluent-sqlite
-
-  linux-fluent-mysql:
-    docker:
-      - image: codevapor/swift:4.1
-      - image: mysql:5.7
-        environment:
-          MYSQL_ALLOW_EMPTY_PASSWORD: true
-          MYSQL_DATABASE: vapor_database
-          # MYSQL_ROOT_HOST: %
-          MYSQL_USER: vapor_username
-          MYSQL_PASSWORD: vapor_password
-    steps:
-      - run:
-          name: Clone Fluent MySQL
-          command: git clone -b master https://github.com/vapor/fluent-mysql.git
-          working_directory: ~/
-      - run:
-          name: Switch Fluent MySQL to this SQL revision
-          command: swift package edit SQL --revision $CIRCLE_SHA1
-          working_directory: ~/fluent-mysql
-      - run:
-          name: Run Fluent MySQL unit tests
-          command: swift test
-          working_directory: ~/fluent-mysql
-
-  linux-fluent-postgresql:
-    docker:
-      - image: codevapor/swift:4.1
-      - image: circleci/postgres:latest
-        name: psql
-        environment:
-          POSTGRES_USER: vapor_username
-          POSTGRES_DB: vapor_database
-          POSTGRES_PASSWORD: vapor_password
-    steps:
-      - run:
-          name: Clone Fluent PostgreSQL
-          command: git clone -b master https://github.com/vapor/fluent-postgresql.git
-          working_directory: ~/
-      - run:
-          name: Switch Fluent PostgreSQL to this SQL revision
-          command: swift package edit SQL --revision $CIRCLE_SHA1
-          working_directory: ~/fluent-postgresql
-      - run:
-          name: Run Fluent PostgreSQL unit tests
-          command: swift test
-          working_directory: ~/fluent-postgresql
-
-
+      - run: swift build -c release
 workflows:
   version: 2
   tests:
     jobs:
       - linux
       - linux-release
-      - linux-fluent
-      - linux-fluent-sqlite
-      - linux-fluent-mysql
-      - linux-fluent-postgresql
-      # - macos
-
-  nightly:
-    triggers:
-      - schedule:
-          cron: "0 0 * * *"
-          filters:
-            branches:
-              only:
-                - master
-    jobs:
-      - linux
-      # - macos
-      
