--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
         image:
           - swift:5.2-focal
           - swift:5.3-focal
-          - swiftlang/swift:nightly-master-focal
+          - swiftlang/swift:nightly-main-focal
         include:
           - { os: 'ubuntu-latest' }
           - { os: 'macos-latest', image: '' }
