--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: test
 on:
   pull_request:
-  push: { branches: [ main, master ] }
+  push: { branches: [ main ] }
 defaults: { run: { shell: bash } }
 jobs:
   sql-kit_all:
