--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,36 @@
 name: test
 on:
-  pull_request:
+  pull_request: { branches: ['*'] }
+  push: { branches: ['main'] }
+
+env:
+  LOG_LEVEL: debug
+  SWIFT_DETERMINISTIC_HASHING: 1
 
 jobs:
-  api-breakage:
+  # Baseline test run for code coverage stats
+  codecov:
     runs-on: ubuntu-latest
-    container: swift:5.6-focal
+    container: swift:5.7-jammy
+    steps:
+      - name: Check out package
+        uses: actions/checkout@v3
+      - name: Run local tests with coverage
+        run: swift test --enable-code-coverage
+      - name: Submit coverage report to Codecov.io
+        uses: vapor/swift-codecov-action@v0.2
+        with:
+          cc_flags: 'unittests'
+          cc_env_vars: 'SWIFT_VERSION,SWIFT_PLATFORM,RUNNER_OS,RUNNER_ARCH,POSTGRES_VERSION'
+          cc_fail_ci_if_error: true
+          cc_verbose: true
+          cc_dry_run: false
+
+  # Check for API breakage versus main
+  api-breakage:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    container: swift:5.7-jammy
     steps:
       - name: Check out package
         uses: actions/checkout@v3
@@ -23,34 +48,32 @@ jobs:
       with_coverage: true
       with_tsan: true
 
+  # Test integration with dependent package on Linux
   integration-tests:
     services:
       mysql-a:
-        image: mysql:latest
+        image: mysql:8
         env: { MYSQL_ALLOW_EMPTY_PASSWORD: "true", MYSQL_USER: test_username, MYSQL_PASSWORD: test_password, MYSQL_DATABASE: test_database }
       mysql-b:
-        image: mysql:latest
+        image: mysql:8
         env: { MYSQL_ALLOW_EMPTY_PASSWORD: "true", MYSQL_USER: test_username, MYSQL_PASSWORD: test_password, MYSQL_DATABASE: test_database }
       postgres-a:
-        image: postgres:latest
+        image: postgres:15
         env: { POSTGRES_USER: test_username, POSTGRES_PASSWORD: test_password, POSTGRES_DB: test_database }
       postgres-b:
-        image: postgres:latest
+        image: postgres:15
         env: { POSTGRES_USER: test_username, POSTGRES_PASSWORD: test_password, POSTGRES_DB: test_database }
     strategy:
       fail-fast: false
       matrix:
         swiftver:
-          - swift:5.4
-          - swift:5.5
-          - swift:5.6
-          - swiftlang/swift:nightly-main
-        swiftos:
-          - focal
+          - swift:5.5-bionic
+          - swift:5.6-focal
+          - swift:5.7-jammy
+          - swiftlang/swift:nightly-main-jammy
     runs-on: ubuntu-latest
-    container: ${{ format('{0}-{1}', matrix.swiftver, matrix.swiftos) }}
+    container: ${{ matrix.swiftver }}
     env:
-      LOG_LEVEL: debug
       POSTGRES_HOSTNAME: postgres-a
       POSTGRES_HOSTNAME_A: postgres-a
       POSTGRES_HOSTNAME_B: postgres-b
@@ -79,7 +102,6 @@ jobs:
     steps:
       - name: Install SQLite dependencies
         run: apt-get -q update && apt-get -q install -y libsqlite3-dev
-
       - name: Check out sql-kit
         uses: actions/checkout@v3
         with: { path: sql-kit }
