[skip ci] Update api-docs.yml

--- a/.github/workflows/api-docs.yml
+++ b/.github/workflows/api-docs.yml
@@ -11,4 +11,4 @@ jobs:
      with:
        package_name: sql-kit
        modules: SQLKit
-       pathsToInvalidate: /sqlkit
+       pathsToInvalidate: /sqlkit/*
