ci: Adds wasm build to CI.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,7 @@ jobs:
     secrets: inherit
     with:
       with_android: true
+      with_wasm: true
 
   pure-fluent-integration-test:
     if: ${{ !(github.event.pull_request.draft || false) }}
